src/objects/Questions__c.object
<CustomObject>
    <description>Contains all questions related to UPL Troubleshooting</description>
    <fields>
        <fullName>OptionText__c</fullName>
        <label>OptionText</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentID__c</fullName>
        <formula>ParentOption__r.QID1__c   &amp; ParentOption__r.OId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ParentQID_lookup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentOption__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ParentOption</label>
        <referenceTo>Options__c</referenceTo>
        <relationshipLabel>Questions</relationshipLabel>
        <relationshipName>Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Q_Id__c</fullName>
        <description>It contains the combination of id&apos;s of questions on which it depends</description>
        <label>Parent Q Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qid__c</fullName>
        <description>Question id</description>
        <displayFormat>{0}</displayFormat>
        <label>Qid</label>
        <type>AutoNumber</type>
    </fields>
    <label>Questions</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Question</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>